Actualizaciones y correcciones de todas las entidades