@@ -1,15 +1,16 @@
 package com.example.proydbp.mesero.domain;
 
-import com.example.proydbp.exception.ResourceNotFoundException;
 import com.example.proydbp.mesero.dto.MeseroRequestDto;
 import com.example.proydbp.mesero.dto.MeseroResponseDto;
 import com.example.proydbp.mesero.dto.MeseroSelfResponseDto;
 import com.example.proydbp.mesero.dto.PatchMeseroDto;
 import com.example.proydbp.mesero.infrastructure.MeseroRepository;
-import com.example.proydbp.order.dto.OrderResponseDto;
-import com.example.proydbp.pedido_local.domain.PedidoLocal;
+import com.example.proydbp.pedido_local.domain.StatusPedidoLocal;
 import com.example.proydbp.pedido_local.dto.PedidoLocalResponseDto;
 import com.example.proydbp.pedido_local.infrastructure.PedidoLocalRepository;
+import com.example.proydbp.reviewMesero.domain.ReviewMesero;
+import com.example.proydbp.reviewMesero.dto.ReviewMeseroResponseDto;
+import com.example.proydbp.user.domain.Role;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.core.context.SecurityContextHolder;
@@ -36,16 +37,20 @@ public class MeseroService {
     public MeseroResponseDto findMeseroById(Long id) {
         Mesero mesero = meseroRepository.findById(id)
                 .orElseThrow(() -> new UsernameNotFoundException("Mesero no encontrado"));
-        return mapToResponseDto(mesero);
+        return modelMapper.map(mesero, MeseroResponseDto.class);
     }
 
     public List<MeseroResponseDto> findAllMeseros() {
-        return meseroRepository.findAll().stream().map(this::mapToResponseDto).toList();
+        return meseroRepository.findAll().stream()
+                .map(mesero -> modelMapper.map(mesero, MeseroResponseDto.class))
+                .collect(Collectors.toList());
     }
 
     public MeseroResponseDto createMesero(MeseroRequestDto dto) {
-        Mesero mesero = mapToEntity(dto);
-        return mapToResponseDto(meseroRepository.save(mesero));
+        Mesero mesero = modelMapper.map(dto, Mesero.class);
+        mesero.setRole(Role.MESERO);
+        mesero.setRatingScore(0.0);
+        return modelMapper.map(meseroRepository.save(mesero), MeseroResponseDto.class);
     }
 
     public void deleteMesero(Long id) {
@@ -57,31 +62,23 @@ public class MeseroService {
     public MeseroResponseDto updateMesero(Long id, PatchMeseroDto dto) {
         Mesero mesero = meseroRepository.findById(id)
                 .orElseThrow(() -> new UsernameNotFoundException("Mesero no encontrado"));
-        if (dto.getRatingScore() != null) {
-            mesero.setRatingScore(dto.getRatingScore());
-        }
-        return mapToResponseDto(mesero);
+
+        modelMapper.map(dto, mesero);
+        Mesero updatedMesero = meseroRepository.save(mesero);
+
+        return modelMapper.map(updatedMesero, MeseroResponseDto.class);
     }
 
     public List<PedidoLocalResponseDto> findPedidosLocalesActuales(Long idMesero) {
         Mesero mesero = meseroRepository.findById(idMesero)
                 .orElseThrow(() -> new UsernameNotFoundException("Mesero no encontrado"));
+
         return mesero.getPedidosLocales().stream()
-                .filter(pedido -> pedido.getEstado().equals("LISTO") || pedido.getEstado().equals("RECIBIDO"))
-                .map(this::mapToPedidoLocalResponseDto)
+                .filter(pedido ->
+                        pedido.getStatus() == StatusPedidoLocal.LISTO ||
+                                pedido.getStatus() == StatusPedidoLocal.EN_PREPARACION)
+                .map(pedido -> modelMapper.map(pedido, PedidoLocalResponseDto.class))
                 .toList();
-    }
-
-    public void pedidoLocalListo(Long idPedidoLocal) {
-        PedidoLocal pedido = pedidoLocalRepository.findById(idPedidoLocal)
-                .orElseThrow(() -> new ResourceNotFoundException("Pedido local no encontrado"));
-        pedido.setEstado("LISTO");
-    }
-
-    public void pedidoLocalEntregado(Long idPedidoLocal) {
-        PedidoLocal pedido = pedidoLocalRepository.findById(idPedidoLocal)
-                .orElseThrow(() -> new ResourceNotFoundException("Pedido local no encontrado"));
-        pedido.setEstado("ENTREGADO");
     }
 
     public MeseroSelfResponseDto getMeseroOwnInfo() {
@@ -97,18 +94,13 @@ public class MeseroService {
     }
 
     // Métodos adicionales
-    public void updateRatingScore(PatchMeseroDto patchMeseroDto, Long id) {
+    public void updateRatingScore(Long id) {
         Mesero mesero = meseroRepository.findById(id)
                 .orElseThrow(() -> new UsernameNotFoundException("Mesero no encontrado"));
 
-        // Actualiza el ratingScore si se proporciona en el DTO
-        if (patchMeseroDto.getRatingScore() != null) {
-            mesero.setRatingScore(patchMeseroDto.getRatingScore());
-        }
-
         // Actualiza el ratingScore promedio a partir de las reseñas
-        double promedio = mesero.getReviewsMesero().stream()
-                .mapToDouble(ReviewMesero::getRating)
+        double promedio = mesero.getReviewMesero().stream()
+                .mapToDouble(ReviewMesero::getRatingScore)
                 .average()
                 .orElse(0.0);
         mesero.setRatingScore(promedio);
@@ -116,60 +108,28 @@ public class MeseroService {
         meseroRepository.save(mesero);
     }
 
-
     public Mesero asignarMesero() {
         return meseroRepository.findAll().stream()
-                .min((m1, m2) -> Integer.compare(m1.getPedidosLocales().size(), m2.getPedidosLocales().size()))
+                .min((m1, m2) -> Integer.compare(
+                        countPedidosEnEstado(m1),
+                        countPedidosEnEstado(m2)))
                 .orElseThrow(() -> new IllegalStateException("No hay meseros disponibles"));
     }
 
-    private MeseroResponseDto mapToResponseDto(Mesero mesero) {
-        return new MeseroResponseDto(mesero.getId(), mesero.getFirstName(),
-                mesero.getLastName(), mesero.getPedidosLocales(),
-                mesero.getReviewsMesero(), mesero.getRatingScore());
+    private int countPedidosEnEstado(Mesero mesero) {
+        return (int) mesero.getPedidosLocales().stream()
+                .filter(pedido -> pedido.getStatus() == StatusPedidoLocal.EN_PREPARACION || pedido.getStatus() == StatusPedidoLocal.LISTO)
+                .count();
     }
 
-    private Mesero mapToEntity(MeseroRequestDto dto) {
-        Mesero mesero = new Mesero();
-        mesero.setPedidosLocales(dto.getPedidosLocales());
-        mesero.setReviewsMesero(dto.getReviewsMesero());
-        mesero.setRatingScore(dto.getRatingScore());
-        return mesero;
-    }
 
-    private PedidoLocalResponseDto mapToPedidoLocalResponseDto(PedidoLocal pedido) {
-        PedidoLocalResponseDto responseDto = new PedidoLocalResponseDto();
+    public List<ReviewMeseroResponseDto> findMisReviews(Long id){
+        Mesero mesero = meseroRepository.findById(id)
+                .orElseThrow(() -> new UsernameNotFoundException("Mesero no encontrado"));
 
-        responseDto.setId(pedido.getId());
-        responseDto.setFecha(pedido.getFecha());
-        responseDto.setHora(pedido.getHora());
-        responseDto.setEstado(pedido.getEstado());
-        responseDto.setPrecio(pedido.getPrecio());
-        responseDto.setTipoPago(pedido.getTipoPago());
-
-        // Mapea la lista de órdenes si existe
-        List<OrderResponseDto> ordersDto = pedido.getOrdenes()
-                .stream()
-                .map(order -> new OrderResponseDto(
-                        order.getId(),
-                        order.getPrice(),
-                        order.getProducts(),
-                        order.getDetails()
-                                ))
-                .collect(Collectors.toList());
-
-        responseDto.setOrdenes(ordersDto);
-
-        // Mapea el mesero asignado al pedido
-        Mesero mesero = pedido.getMesero();
-        MeseroResponseDto meseroDto = new MeseroResponseDto();
-        meseroDto.setId(mesero.getId());
-        meseroDto.setFirstName(mesero.getFirstName());
-        meseroDto.setLastName(mesero.getLastName());
-
-        responseDto.setMesero(meseroDto);
-
-        return responseDto;
+        return mesero.getReviewMesero().stream()
+                .map(review -> modelMapper.map(review, ReviewMeseroResponseDto.class))
+                .toList();
     }
 
 }
